--- a/Home/Tpl/Index/index.html
+++ b/Home/Tpl/Index/index.html
@@ -1,4 +1,11 @@
 <extend name="../Public/base" />
+<block name="css">
+	<link href="__PUBLIC__/mode1/css/animate.css" rel="stylesheet">
+	<link href="__PUBLIC__/mode1/css/style.css" rel="stylesheet">
+</block>
+<block name="js">
+	<script src="__PUBLIC__/mode1/Script/wow.min.js" type="text/javascript"></script>
+</block>
 <block name="main">
 	<div class="row">
 		<div class="col-lg-12">
@@ -17,41 +24,19 @@
 			  </div>
 			</div>
 			<hr />
-			<div class="text-center">
-			    <div class="product_content">
-			        <div>
-			            <p style="color: #333333; font: bold 29px 'STXingkai'; text-align: center; margin: 5px auto;">
-			                	为什么要学编程？
-			            </p>
-			            <div class="clear"></div>
-			        </div>
-			    </div>
+			<div class="product_banner" style="width:100%;background:url('/public/img/us.png') no-repeat; margin:0 auto; height:380px;  background-size: cover;overflow:hidden;">
+				<h1 class="bounceIn wow" data-wow-duration="1s">金牌选手   带出   金牌学员</h1>
+				<!--<a href="/public/index.php/index/Contact/contact" class="bounceIn wow" data-wow-duration="1s">立即前往</a>-->
 			</div>
-			<hr />
-			<div class="row">
-				<div class="col-lg-10 col-lg-offset-1">
-					<div class="row ">
-						<div class="col-lg-4 text-center">
-							<img  src="__PUBLIC__/img/test.png" width="85px" height="85px">
-							<p style="font-size:18px; color:#1999d7; line-height:30px;margin-top: 30px;">会思考</p>
-							<p style="font-size: 14px; color: #494949; text-align: center; line-height: 25px;">掌握计算机严谨的编程思想</p>
-				            <p style="font-size: 14px; color: #494949; text-align: center; line-height: 25px;">思考问题，分析问题，解决问题</p>
-						</div>
-						<div class="col-lg-4 text-center">
-							<img src="__PUBLIC__/img/test1.png" width="85px" height="85px">
-		                    <p style="font-size:18px; color:#1999d7; line-height:30px;margin-top: 30px;">开心学</p>
-							<p style="font-size: 14px; color: #494949; text-align: center; line-height: 25px;">兴趣启蒙，潜力发掘</p>
-				            <p style="font-size: 14px; color: #494949; text-align: center; line-height: 25px;">边学边玩，寓教于乐</p>
-						</div>
-						<div class="col-lg-4 text-center">
-							<img src="__PUBLIC__/img/test2.png" width="85px" height="85px">
-		                    <p style="font-size:18px; color:#1999d7; line-height:30px;margin-top: 30px;">我领先</p>
-							<p style="font-size: 14px; color: #494949; text-align: center; line-height: 25px;">适应人工智能时代，接触最新科技</p>
-				            <p style="font-size: 14px; color: #494949; text-align: center; line-height: 25px;">编程逐渐纳入基础教育，为升学加码</p>
-						</div>
-					</div>
-				</div>
+			<div class="mt30 introduce_big mb30">
+			<div class="introduce_content">
+				<h2 class="bounceInDown wow" data-wow-duration="3s">公司介绍</h2>
+				<p class="bounceInDown wow" data-wow-duration="3s">一码学程由浙江大学团队创立，致力于培养最优秀的信息学学子，成为中国专业的青少年编程教育机构。一码学程目前已经拥有完备的信奥课程体系、线上教学平台，在信奥领域中形成了一定优势。</p>
+				
 			</div>
+		</div>
+
+
 		</div>
 	</div>
 </block>
