--- a/Home/Tpl/User/showLogin.html
+++ b/Home/Tpl/User/showLogin.html
@@ -29,13 +29,13 @@
 			      <button type="submit" class="btn btn-default btn-block" style="background-color: #0aa4c8;color: #FFFFFF;font-size: 18px;">登 录</button>
 			    </div>
 			  </div>
-			  <!--<div class="form-group">
-			    <div class="col-sm-offset-2 col-sm-8 text-right">
+			  <div class="form-group">
+			    <div class="col-sm-offset-2 col-sm-8 text-left">
 			      <div class="checkbox">
-			        <a href="__APP__/User/showGetMail" style="color: #0000FF;">忘记密码</a>
+			        没有账号？<a href="__APP__/User/showRegisterPage" style="color: #0000FF;">立即注册</a>
 			      </div>
 			    </div>
-			  </div>-->
+			  </div>
 			  
 			</form>
 		</div>
