--- a/Home/Tpl/Index/index.html
+++ b/Home/Tpl/Index/index.html
@@ -24,7 +24,7 @@
 			  </div>
 			</div>
 			<hr />
-			<div class="product_banner" style="width:100%;background:url('/public/img/us.png') no-repeat; margin:0 auto; height:380px;  background-size: cover;overflow:hidden;">
+			<div class="product_banner" style="width:100%;background:url('__PUBLIC__/img/us.png') no-repeat; margin:0 auto; height:380px;  background-size: cover;overflow:hidden;">
 				<h1 class="bounceIn wow" data-wow-duration="1s">金牌选手   带出   金牌学员</h1>
 				<!--<a href="/public/index.php/index/Contact/contact" class="bounceIn wow" data-wow-duration="1s">立即前往</a>-->
 			</div>
