--- a/Home/Tpl/Exam/showPending.html
+++ b/Home/Tpl/Exam/showPending.html
@@ -28,11 +28,11 @@
 			</div>
 		</div>
 	</div>
-	<div class="row">
+	<!-- <div class="row">
 		<div class="col-lg-10 col-lg-offset-1">
 			<img src="__PUBLIC__/img/timg.jpg" alt="" />
 		</div>
-	</div>
+	</div> -->
 		<script type="text/javascript"> 
 			$(function(){ 
 				setInterval("getTime();",1000); //每隔一秒执行一次 
